--- a/VistaClientes/htmlClientes/compra.html
+++ b/VistaClientes/htmlClientes/compra.html
@@ -49,16 +49,16 @@
                 <label>Reserva de Butacas:</label>
                 <div class="butacas-container">
                     <!-- Butacas como botones -->
-                    <button type="button" class="butaca" data-id="1A">1A</button>
-                    <button type="button" class="butaca" data-id="1B">1B</button>
-                    <button type="button" class="butaca" data-id="2A">2A</button>
-                    <button type="button" class="butaca" data-id="2B">2B</button>
-                    <button type="button" class="butaca" data-id="3A">3A</button>
-                    <button type="button" class="butaca" data-id="3B">3B</button>
-                    <button type="button" class="butaca" data-id="4A">4A</button>
-                    <button type="button" class="butaca" data-id="4B">4B</button>
-                    <button type="button" class="butaca" data-id="5A">5A</button>
-                    <button type="button" class="butaca" data-id="5B">5B</button>
+                    <button type="button" class="butaca" data-id="11">1 - 1</button>
+                    <button type="button" class="butaca" data-id="12">1 - 2</button>
+                    <button type="button" class="butaca" data-id="21">2 - 1</button>
+                    <button type="button" class="butaca" data-id="22">2 - 2</button>
+                    <button type="button" class="butaca" data-id="31">3 - 1</button>
+                    <button type="button" class="butaca" data-id="32">3 - 2</button>
+                    <button type="button" class="butaca" data-id="41">4 - 1</button>
+                    <button type="button" class="butaca" data-id="42">4 - 2</button>
+                    <button type="button" class="butaca" data-id="51">5 - 1</button>
+                    <button type="button" class="butaca" data-id="52">5 - 2</button>
                 </div>
 
                 <label for="nombre">Nombre del Comprador:</label>
