--- a/VistaClientes/htmlClientes/compra3.html
+++ b/VistaClientes/htmlClientes/compra3.html
@@ -45,16 +45,16 @@
                 <label>Reserva de Butacas:</label>
                 <!-- Butacas representadas como botones -->
                 <div class="butacas-container">
-                    <button type="button" class="butaca" data-id="1A">1 - A</button>
-                    <button type="button" class="butaca" data-id="1B">1 - B</button>
-                    <button type="button" class="butaca" data-id="2A">2 - A</button>
-                    <button type="button" class="butaca" data-id="2B">2 - B</button>
-                    <button type="button" class="butaca" data-id="3A">3 - A</button>
-                    <button type="button" class="butaca" data-id="3B">3 - B</button>
-                    <button type="button" class="butaca" data-id="4A">4 - A</button>
-                    <button type="button" class="butaca" data-id="4B">4 - B</button>
-                    <button type="button" class="butaca" data-id="5A">5 - A</button>
-                    <button type="button" class="butaca" data-id="5B">5 - B</button>
+                    <button type="button" class="butaca" data-id="11">1 - 1</button>
+                    <button type="button" class="butaca" data-id="12">1 - 2</button>
+                    <button type="button" class="butaca" data-id="21">2 - 1</button>
+                    <button type="button" class="butaca" data-id="22">2 - 2</button>
+                    <button type="button" class="butaca" data-id="31">3 - 1</button>
+                    <button type="button" class="butaca" data-id="32">3 - 2</button>
+                    <button type="button" class="butaca" data-id="41">4 - 1</button>
+                    <button type="button" class="butaca" data-id="42">4 - 2</button>
+                    <button type="button" class="butaca" data-id="51">5 - 1</button>
+                    <button type="button" class="butaca" data-id="52">5 - 2</button>
                 </div>
 
                 <label for="nombre">Nombre del Comprador:</label>
