mas informacion en los detalles

--- a/VistaClientes/htmlClientes/detalles.html
+++ b/VistaClientes/htmlClientes/detalles.html
@@ -43,11 +43,31 @@
             </div>
             <div class="sinopsis-items">
                 <label>Duración:</label>
-                <p>140 min</p>
+                <p>01:40:00</p>
             </div>
             <div class="sinopsis-items">
-                <label>País:</label>
-                <p>Reino Unido</p>
+                <label>Fecha de estreno:</label>
+                <p>2024-09-19</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Director/a:</label>
+                <p>Coralie Fargeat</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Productor/a:</label>
+                <p>Coralie Fargeat</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Idioma:</label>
+                <p>Español</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Calificacion:</label>
+                <p>9.0</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Clasificacion:</label>
+                <p>+18</p>
             </div>
         </div>
     </div>
