--- a/VistaClientes/htmlClientes/detalles2.html
+++ b/VistaClientes/htmlClientes/detalles2.html
@@ -43,11 +43,31 @@
             </div>
             <div class="sinopsis-items">
                 <label>Duración:</label>
-                <p>127 min</p>
+                <p>02:07:00</p>
             </div>
             <div class="sinopsis-items">
-                <label>País:</label>
-                <p>Estados Unidos</p>
+                <label>Fecha de estreno:</label>
+                <p>2024-10-18</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Director/a:</label>
+                <p>Parker Finn</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Productor/a:</label>
+                <p>Robert Salerno</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Idioma:</label>
+                <p>Español</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Calificacion:</label>
+                <p>8.6</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Clasificacion:</label>
+                <p>+16</p>
             </div>
         </div>
     </div>
