--- a/VistaClientes/htmlClientes/detalles5.html
+++ b/VistaClientes/htmlClientes/detalles5.html
@@ -43,11 +43,31 @@
             </div>
             <div class="sinopsis-items">
                 <label>Duración:</label>
-                <p>160 min</p>
+                <p>02:40:00</p>
             </div>
             <div class="sinopsis-items">
-                <label>País:</label>
-                <p>Estados Unidos</p>
+                <label>Fecha de estreno:</label>
+                <p>2024-11-22</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Director/a:</label>
+                <p>Jon M. Chu</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Productor/a:</label>
+                <p>Marc Platt</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Idioma:</label>
+                <p>Español</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Calificacion:</label>
+                <p>9.0</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Clasificacion:</label>
+                <p>+10</p>
             </div>
         </div>
     </div>
