--- a/VistaClientes/htmlClientes/detalles3.html
+++ b/VistaClientes/htmlClientes/detalles3.html
@@ -43,11 +43,31 @@
             </div>
             <div class="sinopsis-items">
                 <label>Duración:</label>
-                <p>109 min</p>
+                <p>01:49:00</p>
             </div>
             <div class="sinopsis-items">
-                <label>País:</label>
-                <p>Estados Unidos</p>
+                <label>Fecha de estreno:</label>
+                <p>2024-10-21</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Director/a:</label>
+                <p>Kelly Marcel</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Productor/a:</label>
+                <p>Avi Arad</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Idioma:</label>
+                <p>Español</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Calificacion:</label>
+                <p>4.1</p>
+            </div>
+            <div class="sinopsis-items">
+                <label>Clasificacion:</label>
+                <p>+13</p>
             </div>
         </div>
     </div>
