unas cositas mas

--- a/VistaClientes/htmlClientes/equipo.html
+++ b/VistaClientes/htmlClientes/equipo.html
@@ -39,17 +39,17 @@
             <div class="miembro">
                 <img src="../imagenes/miembro3.jpg" alt="Elias Ramos">
                 <h3>Elias Ramos</h3>
-                <p>eeeh no sé</p>
+                <p>Diseñador de la base de datos</p>
             </div>
             <div class="miembro">
                 <img src="../imagenes/miembro4.jpg" alt="Tiziano Ciocca">
                 <h3>Tiziano Ciocca</h3>
-                <p>no sé tampoco</p>
+                <p>Planificador y Desarrollador de la base de datos</p>
             </div>
             <div class="miembro">
                 <img src="../imagenes/miembro5.jpg" alt="Mateo Florentin">
                 <h3>Mateo Florentin</h3>
-                <p>no sé tampoco de los tampocos</p>
+                <p>Diseñador de la base de datos</p>
             </div>
         </div>
     </div>
